--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>second test</h1>
+    <h1>testing</h1>
     <script src="script.js"></script>
   </body>
 </html>
